[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Menu/play.png" type="Texture" id=1]
[ext_resource path="res://assets/Menu/name.png" type="Texture" id=2]
[ext_resource path="res://assets/Menu/erase.png" type="Texture" id=3]
[ext_resource path="res://assets/Menu/erase-hovered.png" type="Texture" id=4]
[ext_resource path="res://assets/Menu/play-hovered.png" type="Texture" id=5]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=2]
resource_name = "Open"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Open"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Menu" type="Control"]
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="."]
margin_left = 242.0
margin_top = 59.6249
margin_right = 456.0
margin_bottom = 117.625
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Erase" type="TextureButton" parent="."]
margin_left = 137.348
margin_top = 253.372
margin_right = 678.348
margin_bottom = 312.372
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = -4.0
margin_top = 223.0
margin_right = 788.0
margin_bottom = 229.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nome" type="TextureRect" parent="."]
margin_left = 9.52164
margin_top = 401.833
margin_right = 217.522
margin_bottom = 474.833
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Open = SubResource( 2 )
anims/Start = SubResource( 3 )

[node name="StartAnim" type="AnimationPlayer" parent="."]
autoplay = "Open"
anims/Open = SubResource( 4 )
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Erase" to="." method="_on_Erase_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
